--- a/Rotating Navigation/index.html
+++ b/Rotating Navigation/index.html
@@ -8,16 +8,17 @@
     <title>Rotating Navigation</title>
 </head>
 <body>
-    <div class="container show-nav">
+    <div class="container">
         <div class="circle-container">
-            <div class="circle">
-                <button id="close">
-                    <i class="fas fa-times"></i>
-                </button>
-                <button id="open">
-                    <i class="fas fa-bars"></i>
-                </div>
-                </div>
+          <div class="circle">
+            <button id="close">
+              <i class="fas fa-times"></i>
+            </button>
+            <button id="open">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div> 
+        </div>
             <div class="content">
                 <h1>Test Article</h1>
                 <smalll>Florin Pop</smalll>
@@ -55,13 +56,12 @@
 
     <nav>
         <ul>
-            <li>
-                <i class="fas fa-home">Home</i>
-                <i class="fas fa-user-alt">About</i>
-                <i class="fas fa-envelope">Contact</i>
-            </li>
+          <li><i class="fas fa-home"></i> Home</li>
+          <li><i class="fas fa-user-alt"></i> About</li>
+          <li><i class="fas fa-envelope"></i> Contact</li>
         </ul>
-    </nav>
+      </nav>
+      
 
     <script src="script.js"></script>
 </body>
